# pi-bench

./: .gitignore  LICENSE  Makefile  README.md  REPORT.md  leaderboard.md  pyproject.toml
results/: .gitkeep  deberta__mock__injecagent-full-enhanced__seed42.csv  deberta__mock__injecagent-seed__seed42.csv  none__mock__injecagent-full-enhanced__seed42.csv  none__mock__injecagent-seed__seed42.csv  policy__mock__injecagent-full-enhanced__seed42.csv  policy__mock__injecagent-seed__seed42.csv  spotlight-deberta-policy__mock__injecagent-full-enhanced__seed42.csv  spotlight-deberta-policy__mock__injecagent-seed__seed42.csv  spotlight-deberta__mock__injecagent-full-enhanced__seed42.csv  spotlight-deberta__mock__injecagent-seed__seed42.csv  spotlight__mock__injecagent-full-enhanced__seed42.csv  spotlight__mock__injecagent-seed__seed42.csv
src/pibench/: cli.py
src/pibench/core/: cache.py  harness.py  leaderboard.py  registry.py  report.py  scorer.py  stack.py  stats.py  types.py
src/pibench/defenses/: base.py  capability_policy.py  deberta_pi.py  none.py  spotlight.py
src/pibench/models/: base.py  mock.py  openai_compat.py
src/pibench/suites/: base.py  injecagent.py  injecagent_full.py
stacks/: deberta.yaml  none.yaml  policy.yaml  spotlight-deberta-policy.yaml  spotlight-deberta.yaml  spotlight.yaml
tests/: test_capability_policy.py  test_components.py  test_deberta_defense.py  test_harness.py  test_injecagent_full.py  test_leaderboard.py  test_openai_compat.py  test_report.py  test_smoke.py  test_spotlight_defense.py  test_stack.py  test_stats.py
